# AegisHeuristics

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: pages.yml
benchmarks/: CMakeLists.txt  benchmark_dealer.cpp
docs/: Artículo.typ  SDD.md
include/: packingEnv.hpp
scripts/: parse_benchmarks.py
src/: CMakeLists.txt  dealer.cpp  instanceLoader.cpp  main.cpp  player.cpp
tests/: CMakeLists.txt  test_bitwise_logic.cpp
